--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Home Assistant Victoria Metrics add-on repository
-url: 'https://github.com/fuslwusl/homeassistant-addon-victoriametrics'
-maintainer: fuslwusl
+url: 'https://github.com/tnako/homeassistant-addon-victoriametrics'
+maintainer: tnako
