--- a/victoria-metrics/Dockerfile
+++ b/victoria-metrics/Dockerfile
@@ -10,11 +10,11 @@ ARG VERSION=v1.91.2
 RUN /bin/bash -c 'set -ex && \
     ARCH=$(uname -m) && \
     if [ "$ARCH" == "x86_64" ]; then \
-        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-amd64-$VERSION.tar.gz -qO- | tar xvz -C /; \
+        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-amd64-$VERSION-enterprise.tar.gz -qO- | tar xvz -C /; \
     elif [[ "$ARCH" == "arm"* ]]; then \
-        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-arm-$VERSION.tar.gz -qO- | tar xvz -C /; \
+        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-arm-$VERSION-enterprise.tar.gz -qO- | tar xvz -C /; \
     elif [ "$ARCH" == "aarch64" ]; then \
-        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-arm64-$VERSION.tar.gz -qO- | tar xvz -C /; \
+        wget https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VERSION/victoria-metrics-linux-arm64-$VERSION-enterprise.tar.gz -qO- | tar xvz -C /; \
     else \
         echo "Unsupported architecture $ARCH"; \
         return -1; \
